--- a/src/Layout/Home.css
+++ b/src/Layout/Home.css
@@ -21,9 +21,10 @@
 }
 .secciones-container {
     position: relative;
-    width: calc(100% -  60px);
-    margin-right:200px;
-    margin-top: 30px;
+    width: 100%;
+    /*width: calc(100% -  60px);*/
+    /*margin-right:200px;*/
+    /*margin-top: 30px;*/
     height: calc(100vh - 260px);
 }
 .tituloSeccion-container{
@@ -47,6 +48,7 @@
         position: absolute;
         width: calc(100vw - 500px);
         left: 250px;
+        top: 120px;
         margin-left: 0px;
     }
     .tituloSeccion-container {
