--- a/public/css/app.bundle.css
+++ b/public/css/app.bundle.css
@@ -79,28 +79,47 @@ h6 {
     z-index: 500;
     justify-content: center;
 }
-.pedirle-buttonCerrar {
-    position: absolute;
-    top: calc(55vh + 20px);
-    right: calc(5% + 20px);
-    width: 30px;
-    height: 30px;
-    border-radius: 3px;
-    background-color: #ed1d23;
-    color: #fff;
-    font-size: 18px;
-    border: none;
-    z-index: 110;
-}
+
 .formPedidos-container {
-    background-color: rgba(26, 26, 26, 0.87);
+    background-color: rgb(19, 19, 19);
+    border-radius: 10px;
     position: relative;
     display: flex;
-    justify-content: center;
-    top: 55vh;
+    flex-direction: column;
+    align-items: center;
+    top: 35vh;
     width: 90%;
-    height: 270px;
+    height: 60vh;
 }
+
+.formPedidos {
+  position: relative;
+  top: 20px;
+  width: 86%;
+  display: flex;
+  flex-direction: column;
+}
+
+.buttonCerrar-container {
+  position: relative;
+  top: 20px;
+  width: 86%;
+  height: 30px;
+}
+
+.pedirle-buttonCerrar {
+  position: relative;
+  width: 30px;
+  height: 30px;
+  float: right;
+  border-radius: 3px;
+  background-color: #ed1d23;
+  color: #fff;
+  font-size: 18px;
+  border: none;
+  z-index: 110;
+}
+
 .pedirle-confirmacion {
   position: absolute;
   width: 90%;
@@ -109,34 +128,38 @@ h6 {
   z-index: 100;
   display: flex;
   justify-content: start;
-  align-items: flex-end;
 }
+
 .pedirle-confirmacion h1 {
   font-size: 20px;
   color: #ed1d23;
   margin: 20px;
 }
-.h6Pedido{
-  position: absolute;
+.h6Pedido, .h6ElegirOfrenda{
+  position: relative;
   color: #fff;
-  top: -35px;
-  left: 0;
+  margin: 0;
 }
-.formPedidos {
-    position: relative;
-    top: 60px;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
+.h6ElegirOfrenda{
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
+
 .textareaPedido {
   margin-top: 10px;
+  height: 100px;
   resize: none;
+  /*border-radius: 5px;*/
 }
 .inputFecha {
-  width: 70%;
-  margin-top: 2px;
+  position: relative;
+  /*border-radius: 5px;*/
+  width: 50%;
+  margin-top: 5px;
+  margin-right: 0;
+  margin-left: auto;
   text-align: center;  
+  float: right;
 }
 .button-31 {
     align-items: center;
@@ -188,6 +211,53 @@ h6 {
     cursor: pointer;
   }
 
+  .selectOfrenda {
+    width: 100%;
+  }
+  .options {
+    height: 60px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+  }
+  .option{
+    display: grid;
+    place-items: center;
+    transition: all .2s ease-in-out;
+    transform: scale(0.9);
+  }
+  .option:hover{
+    transform: scale(1);
+  }
+  .option.seleccionado{
+    border: 2px solid coral;
+    border-radius: 3px;
+    background-color: rgba(255, 127, 80, 0.336);
+  }
+  .option img {
+    filter: drop-shadow(0px 0px 5px rgb(255, 181, 154));
+  }
+
+  .imgOfrenda1 {
+    width: 110%;
+  }
+
+  .imgOfrenda3 {
+    margin-top: 3px;
+    width: 90%;
+  }
+
+  .imgOfrenda5 {
+    margin-left: 3px;
+  }
+
+  .button-31 {
+    width: 100px;
+    margin-right: 0;
+    margin-left: auto;
+  }
+
   @media screen and (min-width: 600px) {
     .pedirle-container {
       cursor:pointer;
@@ -195,8 +265,15 @@ h6 {
     .formPedidos-container {
       top: 25vh;
       min-width: 340px;
-      width: 30%;
-      height: 300px;
+      width: 40%;
+      height: 420px;
+   }
+   .buttonCerrar-container {
+    top: 30px;
+   }
+   .formPedidos {
+    top: 20px;
+    height: calc(100% - 60px);
    }
    .pedirle-confirmacion {
      top: 25vh;
@@ -204,21 +281,23 @@ h6 {
       width: 30%;
       height: 300px;
   }
+
   .pedirle-confirmacion h1 {
       margin: 40px 55px;
   }
-  .formPedidos {
-      height: 200px;
-      top: 50px;
-      padding-top: 20px;
-  }
-    .pedirle-buttonCerrar {
-      position: absolute;
-      top:calc(25vh + 10px);
-      left: calc(65% - 40px);
-  }
-    .h6Pedido {
+
+  .h6Pedido {
     top:-10px;
+  }
+
+  .button-31 {
+    position: absolute;
+    height: 40px;
+    padding-bottom: 4px;
+    margin-top: 0;
+    bottom: 20px;
+    left: auto;
+    right: 0;
   }
 }
 /*!*************************************************************************************!*\
@@ -272,11 +351,11 @@ h6 {
         top: 50px;
         left: 50px;
         flex-direction: column;
-        width: 300px;
+        width: 200px;
         overflow-x: hidden;
     }
     .carrousel-item {
-        width: 250px;
+        width: 160px;
         margin: 10px;
     }
     .carrousel-item h2 {
@@ -371,6 +450,12 @@ h6 {
 }
 
 
+/*!****************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./src/Secciones/Audios.css ***!
+  \****************************************************************************/
+.elAudio-container {
+    margin: 10px 20px 20px 30px;
+}
 /*!**************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Secciones/Arte.css ***!
   \**************************************************************************/
@@ -473,30 +558,34 @@ h6 {
 
 .altar-container {
     position: relative;
-    width: 70%;
+    width: 100%;
     height: calc(100% - 100px);
-    left: 15%;
-    top: 40px;
+    /*left: 200px;
+    top: 40px;*/
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .altar-container:hover{
     cursor: pointer;
 }
-.pent1, .pent2, .gaucho{
+.pent1, .pent2 {
     position: absolute;
-    width: 150px;
+    width: 200px;
 }
-
+.gaucho {
+  position: absolute;
+  top: 40px;
+  width: 180px;
+}
 .botones-container {
     position: relative;
-    width: calc(100% - 20px);
+    /*width: calc(100% - 20px);*/
+    width: 80%;
+    left: 10%;
     bottom: 35px;
-    margin-top: auto;
-    margin-left: 10px;
-    margin-right: 10px;
     height: 40px;
-    top: 0px;
+    top: 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -558,25 +647,27 @@ h6 {
 
   @media screen and (min-width: 600px) {
     .altar-container {
-      position: absolute;
-      top: 0;
-      width: 100vw;
-      height: 400px;
-      left: -350px;
+      position: relative;
+      top: 40px;
+      width: 100%;
+      height: 300px;
     }
-    .pent1, .pent2, .gaucho{
+    .pent1, .pent2 {
       position: absolute;
       width: 200px;
     }
-    .botones-container {
+    .gaucho {
       position: absolute;
+      width: 180px;
+    }
+    .botones-container {
+      position: relative;
+      display: flex;
       justify-content: center;
-      margin-top: 0px;
-      height: 500px;
-      top:inherit;
+      top: 50px;
+      height: 50px;
       gap: 20px;
-      width: 100vw;
-      left: -350px;
+      margin: 0;
     }
     .instrucciones {
         font-size: 18px;
@@ -587,47 +678,66 @@ h6 {
   \*****************************************************************************/
 @keyframes display {
     0% {
-      transform: translateX(-1100px) translateY(0px);
-      opacity: 0;
+      transform: translateX(0px) translateY(40px) scale(0.8);
     }
+    15% {
+      transform: scale(1)
+    } 
     50% {
-      transform: translateX(0) translateY(0px);
-      opacity: 1;
+      transform: translateX(0px) translateY(0px) scale(1);
+    }
+    85% {
+      transform: scale(1)
     }
     100% {
-      transform: translateX(1100px) translateY(0px);
-      opacity: 0;
+      transform: translateX(300px) translateY(-100px) scale(0.8);
+      
     }
   }
 
 .pedido-container {
-    width: 200px;
+  transform: translateX(-900px) translateY(0);
+    width: 240px;
     z-index: 300;
     color: rgb(0, 0, 0);
     background-color: antiquewhite;
-    height: 60px;
+    height: 80px;
+    padding: 10px 0;
     overflow-y: hidden;
     position: absolute;
-    top: 0;
-    left: calc(50% - 100px);
-    opacity: 0;
+    top: -20px;
+    left: calc(50% - 120px);
     animation: display infinite ease;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    align-items: center;
+
+}
+.pedido-container:hover {
+  transform: translateX(0px) translateY(0px);
+}
+.pedido-textoContainer{
+
 }
 .pedido-texto {
     margin: 5px;
-    font-size: 12px;
+    font-size: 16px;
 }
 .pedido-ofrenda {
     margin: 5px;
-    /*position: absolute;*/
     top: 0px;
     float: right;
     font-size: 24px;
 }
+.img-ofrenda {
+  width: 35px;
+}
 .pedido-fecha {
     font-size: 10px;
-    margin: 5px;
+    margin: 5px 0 15px 0;
 }
+
 
 /*!******************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/Components/Pedidos.css ***!
@@ -640,14 +750,20 @@ h6 {
     text-align: center;
 }
 
+.test {
+    display: none;
+}
+
 @media screen and (min-width: 600px) {
     .pedidos-container {
         position: absolute;
-      top: 270px;
-      width: 50vw;
+        width: 200px;
+        height: 400px;
+        right: -200px;
+        /*background-color: blueviolet;*/
+        top: calc(50vh - 250px);
+        margin: 0;
       overflow: hidden;
-      height: 400px;
-      left: calc(50vw -400px) ;
     }
 
     
@@ -679,13 +795,15 @@ h6 {
 }
 .secciones-container {
     position: relative;
-    width: calc(100% -  60px);
-    margin-left: 30px;
-    margin-top: 30px;
+    width: 100%;
+    /*width: calc(100% -  60px);*/
+    /*margin-right:200px;*/
+    /*margin-top: 30px;*/
     height: calc(100vh - 260px);
 }
 .tituloSeccion-container{
     position: relative;
+    margin-left: 30px;
 }
 .tituloSeccion {
     font-size: 30px;
@@ -703,9 +821,9 @@ h6 {
     }
     .secciones-container {
         position: absolute;
-        width: calc(100vw - 400px);
+        width: calc(100vw - 500px);
+        left: 250px;
         top: 120px;
-        left: 350px;
         margin-left: 0px;
     }
     .tituloSeccion-container {
