--- a/src/Layout/ElPdf.css
+++ b/src/Layout/ElPdf.css
@@ -1,9 +1,9 @@
 .elPdf-container {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: -240px;
-    left: -30px;
+    width: 90%;
+    height: 80vh;
+    top: -20vh;
+    left: 5%;
     margin: 0;
     z-index: 700;
 }
@@ -32,15 +32,16 @@
 }
 
 @media screen and (min-width: 600px) {
+
     .elPdf-iframe {
         position: relative;
-        top: 200px;
-        width: 50%;
-        height: 400px;
+        top: 120px;
+        width: 100%;
+        height: 500px;
     }
     .elPdf-cerrar {
         position: absolute;
         top: 550px;
-        left: calc(50% - 85px);
+        right: 0;
     }
 }
