--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .app-container {
-    background-color: #ed1d23;
-    width: 100%;
-    min-height: 100vh;
+  background-color: #ed1d23;
+  /* width: 100%;
+  min-height: 100vh; */
+  height: 100vh;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column;
 }
