--- a/src/Layout/ElPdf.css
+++ b/src/Layout/ElPdf.css
@@ -1,20 +1,35 @@
 .elPdf-container {
-    position: absolute;
-    width: 90%;
-    height: 80vh;
-    top: -20vh;
-    left: 5%;
-    margin: 0;
-    z-index: 700;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  z-index: 700;
+  top: 0;
 }
 .elPdf-iframe {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    z-index: 800;
+  position: relative;
+  top: 0;
+  left: 5%;
+  width: 90%;
+  height: 60vh;
+  z-index: 800;
 }
 .elPdf-cerrar {
-    position: absolute;
+  position: absolute;
+  /* right: calc(10% + 20px); */
+  left: 30px;
+  top: 15px;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  background-color: #ed1d23;
+  color: antiquewhite;
+  font-size: 20px;
+  padding-bottom: 10px;
+  border: none;
+  z-index: 1000;
+
+  /* position: absolute;
     background-color: #ed1d23;
     color: #fff;
     font-size: 30px;
@@ -25,23 +40,22 @@
     height: 40px;
     z-index: 900;
     border: none;
-    border-radius: 5px;
+    border-radius: 5px; */
 }
-.elPdf-cerrar:hover{
-    cursor: pointer;
+.elPdf-cerrar:hover {
+  cursor: pointer;
 }
 
 @media screen and (min-width: 600px) {
-
-    .elPdf-iframe {
-        position: relative;
-        top: 120px;
-        width: 100%;
-        height: 500px;
-    }
-    .elPdf-cerrar {
-        position: absolute;
-        top: 550px;
-        right: 0;
-    }
+  .elPdf-iframe {
+    position: relative;
+    top: 120px;
+    width: 100%;
+    height: 500px;
+  }
+  /* .elPdf-cerrar {
+    position: absolute;
+    top: 550px;
+    right: 0;
+  } */
 }
