--- a/src/Layout/ModalEncabezado.css
+++ b/src/Layout/ModalEncabezado.css
@@ -1,84 +1,104 @@
-.encabezado-fondo{
-    position:absolute;
-    background-color: rgba(0, 0, 0, 0.726);
-    width: 100%;
-    height: 100vh;
-    top:0;
-    z-index: 1000;
-    animation-name: opac;
-    animation-duration: 1s;
+.encabezado-fondo {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.726);
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  z-index: 1000;
+  animation-name: opac;
+  animation-duration: 1s;
 }
 @keyframes opac {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 .encabezado-fondo.cerrando {
-    animation-name: cerrando;
-    animation-duration: 1s;
+  animation-name: cerrando;
+  animation-duration: 1s;
 }
 @keyframes cerrando {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-    }
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+  }
 }
-.encabezado-container{
-    position: relative;
-    width: 80%;
-    left: 10%;
-    height: calc(100vh - 200px);
-    top: 80px;
-    padding-top: 20px;
-    background-color: antiquewhite;
+.encabezado-container {
+  position: relative;
+  width: 80%;
+  left: 10%;
+  height: calc(100vh - 150px);
+  top: 80px;
+  padding-top: 20px;
+  background-color: antiquewhite;
+  overflow-y: scroll;
 }
 
 .encabezado-container button {
-    position: fixed;
-    right: calc(10% + 20px);
-    width: 30px;
-    height: 30px;
-    border-radius: 3px;
-    background-color: #ed1d23;
-    color:antiquewhite;
-    font-size: 20px;
-    padding-bottom: 10px;
-    border: none;
-    z-index: 110;
+  position: fixed;
+  right: calc(10% + 20px);
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  background-color: #ed1d23;
+  color: antiquewhite;
+  font-size: 20px;
+  padding-bottom: 10px;
+  border: none;
+  z-index: 110;
+}
+.encabezado-container button:hover {
+  cursor: pointer;
 }
 .encabezado-textos {
-    position: relative;
-    top: 0px;
-    height: 95%;
-    overflow-y: scroll;
+  position: relative;
+  top: 0px;
+  height: 95%;
+  overflow-y: scroll;
 }
 .encabezado-textos h2 {
-    margin: 0 20px;
-    font-size: 28px;
+  margin: 0 20px;
+  font-size: 26px;
 }
 .encabezado-textos h3 {
-    margin: 0 20px;
+  margin: 0 18px;
 }
 .encabezado-textos p {
-    margin: 20px;
+  margin: 20px;
 }
 
 @media screen and (min-width: 600px) {
-    .encabezado-container{
-        position: relative;
-        width: 60%;
-        left: 20%;
-    }
-    .encabezado-textos {
-        overflow-y: visible;
-    }
-    .encabezado-container button {
-        right: calc(20% + 20px);
-    }
+  .encabezado-fondo {
+    display: flex;
+    align-items: center;
+  }
+  .encabezado-container {
+    top: inherit;
+    position: relative;
+    width: 60%;
+    left: 20%;
+    padding-bottom: 40px;
+    height: auto;
+  }
+  .encabezado-textos {
+    overflow-y: visible;
+  }
+  .encabezado-container button {
+    right: calc(20% + 20px);
+  }
 }
 
+@media screen and (min-width: 1400px) {
+  .encabezado-container {
+    width: 40%;
+    left: 30%;
+  }
+  .encabezado-fondo button {
+    right: calc(30% + 20px);
+  }
+}
