--- a/src/Secciones/Altar.css
+++ b/src/Secciones/Altar.css
@@ -1,20 +1,18 @@
-
 .altar-container {
-    position: relative;
-    width: 100%;
-    height: calc(100% - 100px);
-    /*left: 200px;
-    top: 40px;*/
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: relative;
+  width: 100%;
+  height: calc(100% - 100px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.altar-container:hover{
-    cursor: pointer;
+.altar-container:hover {
+  cursor: pointer;
 }
-.pent1, .pent2 {
-    position: absolute;
-    width: 200px;
+.pent1,
+.pent2 {
+  position: absolute;
+  width: 200px;
 }
 .gaucho {
   position: absolute;
@@ -22,97 +20,118 @@
   margin-top: 40px;
 }
 .botones-container {
-    position: relative;
-    /*width: calc(100% - 20px);*/
-    width: 80%;
-    left: 10%;
-    bottom: 35px;
-    height: 40px;
-    top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: relative;
+  width: 86%;
+  left: 7%;
+  bottom: 35px;
+  height: 40px;
+  top: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .instrucciones {
-    font-weight: 400;
+  font-weight: 400;
+  font-size: 14px;
+}
+@media screen and (min-width: 350px) {
+  .instrucciones {
     font-size: 16px;
+  }
 }
 .button-30 {
-    align-items: center;
-    appearance: none;
-    background-color: #FCFCFD;
-    border-radius: 4px;
-    border-width: 0;
-    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
-    box-sizing: border-box;
-    color: #1d1d1d;
-    cursor: pointer;
-    font-weight: 600;
-    display: inline-flex;
-    height: 48px;
-    justify-content: center;
-    line-height: 1;
-    list-style: none;
-    overflow: hidden;
-    padding-left: 16px;
-    padding-right: 16px;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transition: box-shadow .15s,transform .15s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    white-space: nowrap;
-    will-change: box-shadow,transform;
-    font-size: 18px;
-    margin-right: 0px;
-    z-index: 400;
-  }
-  
-  .button-30:focus {
-    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-  }
-  
-  .button-30:hover {
-    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
-    transform: translateY(-2px);
-  }
-  
-  .button-30:active {
-    box-shadow: #D6D6E7 0 3px 7px inset;
-    transform: translateY(2px);
-  }
-  .pent1.active {
-    filter: drop-shadow(0 0 40px #ffe600);
-    transition: filter 2s;
-  }
+  align-items: center;
+  appearance: none;
+  background-color: #fcfcfd;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #1d1d1d;
+  cursor: pointer;
+  font-weight: 600;
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow 0.15s, transform 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow, transform;
+  font-size: 18px;
+  margin-right: 0px;
+  z-index: 400;
+}
 
-  @media screen and (min-width: 600px) {
-    .altar-container {
-      position: relative;
-      top: 40px;
-      width: 100%;
-      height: 300px;
-    }
-    .pent1, .pent2 {
-      position: absolute;
-      width: 200px;
-    }
-    .gaucho {
-      position: absolute;
-      width: 180px;
-    }
-    .botones-container {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      top: 50px;
-      height: 50px;
-      gap: 20px;
-      margin: 0;
-    }
-    .instrucciones {
-        font-size: 18px;
-    }
+.button-30:focus {
+  box-shadow: #d6d6e7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+}
+
+.button-30:hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px,
+    rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #d6d6e7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.button-30:active {
+  box-shadow: #d6d6e7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+.pent1.active {
+  filter: drop-shadow(0 0 40px #ffe600);
+  transition: filter 2s;
+}
+
+@media screen and (min-width: 600px) {
+  .altar-container {
+    position: relative;
+    top: 40px;
+    width: 100%;
+    height: 300px;
   }
+  .pent1,
+  .pent2 {
+    position: absolute;
+    width: 200px;
+  }
+  .gaucho {
+    position: absolute;
+    width: 180px;
+  }
+  .botones-container {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    top: 50px;
+    height: 50px;
+    gap: 20px;
+    margin: 0;
+  }
+  .instrucciones {
+    font-size: 18px;
+  }
+}
+
+@media screen and (min-width: 1300px) {
+  .altar-container {
+    height: 600px;
+  }
+  .pent1,
+  .pent2 {
+    width: 300px;
+  }
+  .gaucho {
+    width: 280px;
+  }
+}
