--- a/src/Secciones/Audios.css
+++ b/src/Secciones/Audios.css
@@ -1,3 +1,31 @@
 .elAudio-container {
-    margin: 10px 20px 20px 30px;
+  margin: 10px 30px 20px 30px;
+}
+.audio-tag {
+  filter: sepia(20%) saturate(70%) grayscale(1) contrast(99%) invert(12%);
+  width: 100%;
+  height: 40px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.elAudio-container p {
+  font-size: 14px;
+}
+@media screen and (min-width: 600px) {
+  .audio-tag {
+    width: 70%;
+  }
+  .elAudio-container {
+    margin: 20px 30px 20px 0px;
+  }
+}
+@media screen and (min-width: 1300px) {
+  .audio-tag {
+    width: 50%;
+  }
+}
+@media screen and (min-width: 1500px) {
+  .audio-tag {
+    width: 40%;
+  }
 }
