--- a/src/Secciones/Santuarios.css
+++ b/src/Secciones/Santuarios.css
@@ -1,24 +1,16 @@
-/* .image-gallery {
-  background-color: aquamarine;
-}
-
-.image-gallery-content {
-  height: 100px;
-} */
-
 .gallery-itemDescription {
   font-size: 14px;
   line-height: 14px;
 }
 .gallery-descripciones-container {
-  margin: 20px 10px 10px 30px;
+  margin: 10px 10px 20px 30px;
 }
 
 .imagenGrande-container {
   position: fixed;
   display: grid;
   place-items: center;
-  background-color: rgba(7, 7, 7, 0.589);
+  background-color: rgba(7, 7, 7, 0.7);
   top: 0px;
   left: 0px;
   width: 100vw;
@@ -27,19 +19,58 @@
 }
 
 .imagenGrande {
-  /*width: 60%;*/
-  height: 80vh;
+  width: 100%;
+  /* height: 80vh; */
 }
+
 .boton-agrandar {
   position: fixed;
-  top:10px;
+  bottom: -20px;
   width: 100px;
   left: calc(50% - 50px);
   z-index: 10000;
 }
 
+.cerrar-agrandar {
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  width: 30px;
+  height: 30px;
+  border-radius: 3px;
+  background-color: #ed1d23;
+  color: antiquewhite;
+  font-size: 20px;
+  padding-bottom: 10px;
+  border: none;
+  z-index: 110;
+}
+
 @media screen and (min-width: 600px) {
   .gallery-descripciones-container {
     margin: 10px 10px 10px 60px;
+  }
+  .imagenGrande {
+    width: auto;
+    height: 80vh;
+  }
+  .cerrar-agrandar {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    border-radius: 3px;
+    background-color: #ed1d23;
+    color: antiquewhite;
+    font-size: 20px;
+    padding-bottom: 10px;
+    border: none;
+    z-index: 110;
+  }
+  .boton-agrandar {
+    height: 40px;
+    font-size: 20px;
+    line-height: 20px;
   }
 }
